--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+             <groupId>org.thymeleaf.extras</groupId>
+             <artifactId>thymeleaf-extras-java8time</artifactId>
+             <version>3.0.4.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
