--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,47 @@
-HELP.md
+# ========= Java =========
+*.class
+*.jar
+*.war
+*.ear
+
+# ========= Maven =========
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+.mvn/
+!mvn/wrapper/maven-wrapper.jar
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# ========= Spring Boot =========
+# Fichiers sensibles de config locale
+application-local.properties
+application-dev.properties
+application-test.properties
+.env
+*.log
+*.pid
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
+# ========= NetBeans spécifique =========
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# Cache NetBeans
+build/
+nbactions.xml
+nb-configuration.xml
+
+# ========= OS fichiers système =========
+.DS_Store
+Thumbs.db
+
+# ========= Logs =========
+logs/
+*.log
+
+# ========= VS Code (au cas où) =========
 .vscode/
