--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=medical-appointment-api
-spring.datasource.url=jdbc:postgresql://localhost:5432/appointment
-spring.datasource.username=postgres
-spring.datasource.password=TheHacker
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/appointment}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:TheHacker}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
@@ -13,24 +13,40 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
 # Port du serveur
-server.port=8080
+server.port=${PORT:8080}
 
 # Configuration des fichiers uploadés
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
 
-# Configuration de Swagger
-springfox.documentation.swagger-ui.enabled=true
+# Configuration de Springdoc OpenAPI
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
 
 # Configuration de Prometheus
 management.endpoints.web.exposure.include=prometheus,health,info
 management.endpoint.prometheus.enabled=true
 
 # Clé secrète JWT
-jwt.secret=your-very-secure-and-long-secret-key-1234567890
+jwt.secret=${JWT_SECRET:your-very-secure-and-long-secret-key-1234567890}
 
-# Dans application.properties
+# Logging
 logging.level.org.springframework=DEBUG
 logging.level.com.example.medical_appointment=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tomcat
+server.port=8443
+
+
+spring.datasource.url=jdbc:postgresql://db:5432/medical_db
+spring.datasource.username=postgres
+spring.datasource.password=secret
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=8080
