--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=medical-appointment-api
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/appointment}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:TheHacker}
+
+# Profil actif par défaut (local)
+spring.profiles.active=local
+
+# Config commune à tous les profils
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -12,7 +14,7 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
-# Port du serveur
+# Port du serveur (sera remplacé si nécessaire dans les profils)
 server.port=${PORT:8080}
 
 # Configuration des fichiers uploadés
@@ -37,16 +39,8 @@ logging.level.com.example.medical_appointment=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 
+# SSL (utilisé si activé)
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=changeit
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=tomcat
-server.port=8443
-
-
-spring.datasource.url=jdbc:postgresql://db:5432/medical_db
-spring.datasource.username=postgres
-spring.datasource.password=secret
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.port=8080
