--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,9 @@ spring.flyway.baseline-on-migrate=true
 
 # Port du serveur (configurable via variable d'environnement)
 server.port=${PORT:8080}
+server.address=0.0.0.0
 
-# Configuration des fichiers uploadés
+# Configuration des fichiers uploadés 
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
 
